@@ -154,38 +154,17 @@ abstract class AbstractMultiTermQueryConstantScoreWrapper<Q extends MultiTermQue
         List<TermAndState> collectedTerms)
         throws IOException;
 
-    private IOSupplier<WeightOrDocIdSetIterator> rewrite(LeafReaderContext context, Terms terms)
-        throws IOException {
-      assert terms != null;
-
-      final int fieldDocCount = terms.getDocCount();
-      final TermsEnum termsEnum = q.getTermsEnum(terms);
-      assert termsEnum != null;
-
-      final List<TermAndState> collectedTerms = new ArrayList<>();
-      boolean collectResult = collectTerms(fieldDocCount, termsEnum, collectedTerms);
-      if (collectResult && collectedTerms.isEmpty()) {
-        return null;
+    private WeightOrDocIdSetIterator rewriteAsBooleanQuery(
+        LeafReaderContext context, List<TermAndState> collectedTerms) throws IOException {
+      BooleanQuery.Builder bq = new BooleanQuery.Builder();
+      for (TermAndState t : collectedTerms) {
+        final TermStates termStates = new TermStates(searcher.getTopReaderContext());
+        termStates.register(t.state, context.ord, t.docFreq, t.totalTermFreq);
+        bq.add(new TermQuery(new Term(q.field, t.term), termStates), BooleanClause.Occur.SHOULD);
       }
-      return () -> {
-        if (collectResult) {
-          // build a boolean query
-          BooleanQuery.Builder bq = new BooleanQuery.Builder();
-          for (TermAndState t : collectedTerms) {
-            final TermStates termStates = new TermStates(searcher.getTopReaderContext());
-            termStates.register(t.state, context.ord, t.docFreq, t.totalTermFreq);
-            bq.add(
-                new TermQuery(new Term(q.field, t.term), termStates), BooleanClause.Occur.SHOULD);
-          }
-          Query q = new ConstantScoreQuery(bq.build());
-          final Weight weight = searcher.rewrite(q).createWeight(searcher, scoreMode, score());
-          return new WeightOrDocIdSetIterator(weight);
-        } else {
-          // Too many terms to rewrite as a simple bq.
-          // Invoke rewriteInner logic to handle rewriting:
-          return rewriteInner(context, fieldDocCount, terms, termsEnum, collectedTerms);
-        }
-      };
+      Query q = new ConstantScoreQuery(bq.build());
+      final Weight weight = searcher.rewrite(q).createWeight(searcher, scoreMode, score());
+      return new WeightOrDocIdSetIterator(weight);
     }
 
     private boolean collectTerms(int fieldDocCount, TermsEnum termsEnum, List<TermAndState> terms)
@@ -240,9 +219,44 @@ abstract class AbstractMultiTermQueryConstantScoreWrapper<Q extends MultiTermQue
         return null;
       }
 
-      final long cost = estimateCost(terms, q.getTermsCount());
-      IOSupplier<WeightOrDocIdSetIterator> weightOrIteratorSupplier = rewrite(context, terms);
-      if (weightOrIteratorSupplier == null) return null;
+      assert terms != null;
+
+      final int fieldDocCount = terms.getDocCount();
+      final TermsEnum termsEnum = q.getTermsEnum(terms);
+      assert termsEnum != null;
+
+      List<TermAndState> collectedTerms = new ArrayList<>();
+      boolean collectResult = collectTerms(fieldDocCount, termsEnum, collectedTerms);
+
+      final long cost;
+      if (collectResult) {
+        // Return a null supplier if no query terms were in the segment:
+        if (collectedTerms.isEmpty()) {
+          return null;
+        }
+
+        // TODO: Instead of replicating the cost logic of a BooleanQuery we could consider rewriting
+        // to a BQ eagerly at this point and delegating to its cost method (instead of lazily
+        // rewriting on #get). Not sure what the performance hit would be of doing this though.
+        long sumTermCost = 0;
+        for (TermAndState collectedTerm : collectedTerms) {
+          sumTermCost += collectedTerm.docFreq;
+        }
+        cost = sumTermCost;
+      } else {
+        cost = estimateCost(terms, q.getTermsCount());
+      }
+
+      IOSupplier<WeightOrDocIdSetIterator> weightOrIteratorSupplier =
+          () -> {
+            if (collectResult) {
+              return rewriteAsBooleanQuery(context, collectedTerms);
+            } else {
+              // Too many terms to rewrite as a simple bq.
+              // Invoke rewriteInner logic to handle rewriting:
+              return rewriteInner(context, fieldDocCount, terms, termsEnum, collectedTerms);
+            }
+          };
 
       return new ScorerSupplier() {
         @Override
